fixed some links for fb_login, fixed db schema syntax (5.5 :-( )

--- a/config.yml
+++ b/config.yml
@@ -44,6 +44,7 @@ plugins:
                    dbi_params:
                        RaiseError: 1
                        AutoCommit: 1
+                   mysql_auto_reconnect: 1
                    on_connect_do: ["SET NAMES 'utf8'", "SET CHARACTER SET 'utf8'" ]
                    log_queries: 1
 
